--- a/arrayTraversing.html
+++ b/arrayTraversing.html
@@ -4,7 +4,8 @@
     <title>Array Traversing</title>
     <script src="arrayTraversing.js"></script>
 </head>
-
 <body>
+    <input type="text" id="element"/>
+    <button onclick="getElement()">Get Element</button>
 </body>
 </html>
